Added a button on the homepage that redirects to the only question

--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -6,6 +6,12 @@
 <body>
 <h1>Welcome to Q Bank</h1>
 <h2>Press the button below to get started</h2>
-<button type='button' name='start_button'>Click to start</button>
+
+<form>
+	
+</form>
+<form action="/the_only_question/">
+	<input type="Submit" value="Start!" id='submit'>
+</form>
 </body>
 </html>
