Back to passing UT/FT with question/answer models and static view page

--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -10,7 +10,7 @@
 <form>
 	
 </form>
-<form action="/the_only_question/">
+<form action="/questions/1/">
 	<input type="Submit" value="Start!" id='submit'>
 </form>
 </body>
