Added a question field to the database and got it to display using a view. Now each question has associated answers

--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -4,7 +4,7 @@
 	<title>NSQ Questions</title>
 </head>
 <body>
-<p>Question #1 There are four possible answers</p>
+<p>{{ question_stem }}</p>
 <!-- <form>
 	<input type="radio" name ='answers' value='answer_1'>First Answer<br>
 	<input type="radio" name ='answers' value='answer_2'>Second Answer<br>
@@ -12,10 +12,13 @@
 	<input type="radio" name ='answers' value='answer_4'>Fourth <br>
 	<input type="Submit" value="Submit" id='submit'>
 </form> -->
+<form>
 <table id='id_answers_table'>
 	{% for answer in answers %}
 	<input type="radio" name='answers' value='answer_{{ forloop.counter }}'> {{ answer.text }} <br>
 	{% endfor %}
 </table>
+<input type='Submit' value='Submit' id='submit'>
+</form>
 </body>
 </html>
