Added answer view page that redirects to the next question

--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -4,21 +4,15 @@
 	<title>NSQ Questions</title>
 </head>
 <body>
-<p>{{ question_stem }}</p>
-<!-- <form>
-	<input type="radio" name ='answers' value='answer_1'>First Answer<br>
-	<input type="radio" name ='answers' value='answer_2'>Second Answer<br>
-	<input type="radio" name ='answers' value='answer_3'>Third Answer<br>
-	<input type="radio" name ='answers' value='answer_4'>Fourth <br>
-	<input type="Submit" value="Submit" id='submit'>
-</form> -->
-<form>
+<p>{{ question_stem.text }}</p>
+<form method="POST" action="/questions/{{ question_stem.id }}/answer">
 <table id='id_answers_table'>
 	{% for answer in answers %}
 	<input type="radio" name='answers' value='answer_{{ forloop.counter }}'> {{ answer.text }} <br>
 	{% endfor %}
 </table>
-<input type='Submit' value='Submit' id='submit'>
+<input type='Submit' value='View Correct Answer' id='submit'>
+{% csrf_token %}
 </form>
 </body>
 </html>
