--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -5,13 +5,15 @@
 </head>
 <body>
 <p>{{ question_stem.text }}</p>
-<form method="POST" action="/questions/{{ question_stem.id }}/answer">
-<table id='id_answers_table'>
+<form method="POST" action="/questions/{{ question_stem.id }}/">
+<!-- <table id='id_answers_table'>
 	{% for answer in answers %}
 	<input type="radio" name='answers' value='answer_{{ forloop.counter }}'> {{ answer.text }} <br>
 	{% endfor %}
 </table>
-<input type='Submit' value='View Correct Answer' id='submit'>
+ -->
+ {{ form }}
+<p><input type='Submit' value='View Correct Answer' id='submit'></p>
 {% csrf_token %}
 </form>
 </body>
