Using HTML form and now able to submit radio answers. Great sucess

--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -8,11 +8,9 @@
 <form method="POST" action="/questions/{{ question_stem.id }}/">
 <table id='id_answers_table'>
 	{% for answer in answers %}
-	<input type="radio" name='radio_answer' value='answer_{{ forloop.counter }}'> {{ answer.text }} <br>
+	<input type="radio" name='radio_answer' value='{{answer.text}}'> {{ answer.text }} <br>
 	{% endfor %}
 </table>
-
- {{ form }}
 <p><input type='Submit' value='View Correct Answer' id='submit'></p>
 {% csrf_token %}
 </form>
