Answer page better formatted and redirects to the next question

--- a/qanda/templates/view_answer.html
+++ b/qanda/templates/view_answer.html
@@ -5,16 +5,14 @@
 </head>
 <body>
 <p>{{ question_stem.text }}</p>
-<p>{{ explination_text.text }}</p>
-<form method="POST" action="/questions/{{ next_question_id }}/">
-<table id='id_answers_table'>
 {% for answer in correct_answer %}
-	<tr><td>{{ answer.text }}</td></tr>
+{{ answer.text }}
 {% endfor %}		
-</table>
-<input type='Submit' value='Next Question' id='submit' autofocus>
-{% csrf_token %}
-</form>
 
+<p>{{ explination_text.text }}</p>
+<form method="GET" action="/questions/{{ next_question_id }}/">
+{% csrf_token %}
+<input type='Submit' value='Next Question' id='submit' autofocus>
+</form>
 </body>
 </html>
