--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>NSQ Questions</title>
-</head>
-<body>
-<p>{{ question_stem.text }}</p>
-<form method="POST" action="/questions/{{ question_stem.id }}/">
-<table id='id_answers_table'>
-	{% for answer in answers %}
-	<input type="radio" name='radio_answer' value='{{answer.text}}' required='true'> {{ answer.text }} <br>
-	{% endfor %}
-</table>
-<p>{{ try_again }}</p>
-<p><input type='Submit' value='View Correct Answer' id='submit'></p>
-{% csrf_token %}
-</form>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block question_block %}
+{{ question_stem.text }}
+{% endblock %}
+
+{% block form_action %}
+	<form method="POST" action="/questions/{{ question_stem.id }}/">
+		<table id='id_answers_table'>
+			{% for answer in answers %}
+			<input type="radio" name='radio_answer' value='{{answer.text}}' required='true'> {{ answer.text }} <br>
+			{% endfor %}
+		</table>
+	<p>{{ try_again }}</p>
+	<p><input type='Submit' value='View Correct Answer' id='submit'></p>
+	{% csrf_token %}
+	</form>
+{% endblock %}	
