--- a/qanda/templates/view_answer.html
+++ b/qanda/templates/view_answer.html
@@ -15,6 +15,6 @@
 {% block form_action %}
 	<form method="GET" action="/questions/{{ next_question_id }}/">
 		{% csrf_token %}
-		<input type='Submit' value='Next Question' id='submit' autofocus>
+		<input type='Submit' value='Next Question' id='submit_id' autofocus>
 	</form>
 {% endblock %}
