--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -6,13 +6,13 @@
 
 {% block form_action %}
 	<form method="POST" action="/questions/{{ question_stem.id }}/">
-		<table id='id_answers_table'>
+		<table id='id_answers_table' class='table'>
 			{% for answer in answers %}
 			<input type="radio" name='radio_answer' value='{{answer.text}}' required='true'> {{ answer.text }} <br>
 			{% endfor %}
 		</table>
 	<p>{{ try_again }}</p>
-	<p><input type='Submit' value='View Correct Answer' id='submit'></p>
+	<p><input type='Submit' value='View Correct Answer' id='submit_id'></p>
 	{% csrf_token %}
 	</form>
 {% endblock %}	
