Added references to the model and corrected the answer view page accordingly

--- a/qanda/templates/base.html
+++ b/qanda/templates/base.html
@@ -29,6 +29,12 @@
 
 	<div class="row">
 		<div class="col-md-6">
+			{% block reference_block %}{% endblock %}	
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-6">
 			{% block form_action %}{% endblock %}	
 		</div>
 	</div>	
