--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -39,7 +39,7 @@
 				<!--Nav Bar-->
 				<nav id='nav'>
 					<ul class="menu">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="#">About</a>
 						<ul>
 							<li><a href="#">About Us</a></li>
@@ -60,7 +60,7 @@
 								<h2>Welcome to NSQ!</h2>
 								<span class="byline">&hellip; your source for review questions for preperation for the neurosurgery written board examination&hellip;</span>
 							</header>
-							<a href="/questions/1/" class="button alt">Get Started</a>
+							<a href="/questions/1/" class="button alt" id='submit_id'>Get Started</a>
 						</section>
 					</div>
 					
@@ -94,5 +94,6 @@
 							
 					</section>
 				</div>
-
+				<div class="copyright">
+<h3>Design by: O. Arnaout <i class="fa fa-copyright fa-lg"></i> 2014-2015</h3>
 				</body>
