spell correct explination

--- a/qanda/templates/view_answer.html
+++ b/qanda/templates/view_answer.html
@@ -10,7 +10,7 @@
 {% endfor %}
 {% endblock %}
 		
-{% block explination_block %}<p>{{ explination_text.text }}</p>{% endblock %}
+{% block explanation_block %}<p>{{ explanation_text.text }}</p>{% endblock %}
 
 {% block reference_block %}
 {% for reference in references %}
