--- a/qanda/templates/base.html
+++ b/qanda/templates/base.html
@@ -23,7 +23,7 @@
 
 	<div class="row">
 		<div class="col-md-6">
-			{% block explination_block %}{% endblock %}	
+			{% block explanation_block %}{% endblock %}	
 		</div>
 	</div>
 
