Modified static file references

--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -8,12 +8,12 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Neurosurgery Written Board Preperation" />
 		<meta name="keywords" content="Neurosurgery, Board, Question Bank" />
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<!-- Custom CSS -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 		<!-- Dropotron -->
-		<script src="../static/js/jquery.js"></script>
-		<script src="../static/js/jquery.dropotron.min.js"></script>
+		<script src="/static/js/jquery.js"></script>
+		<script src="/static/js/jquery.dropotron.min.js"></script>
 			<script>
 			$(function() {
 				
