--- a/qanda/templates/view_answer.html
+++ b/qanda/templates/view_answer.html
@@ -6,7 +6,7 @@
 
 {% block answer_block %}
 {% for answer in correct_answer %}
-{{ answer.text }}
+<p><b>{{ answer.text }}</b></p>
 {% endfor %}
 {% endblock %}
 		
