--- a/qanda/templates/view_question.html
+++ b/qanda/templates/view_question.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block form_action %}
-	<form method="POST" action="/questions/{{ question_stem.id }}/">
+	<form method="POST" action="{% url 'view_question' question_stem.id %}">
 		<table id='id_answers_table' class='table'>
 			{% for answer in answers %}
 			<input type="radio" name='radio_answer' value='{{answer.text}}' required='true'> {{ answer.text }} <br>
@@ -19,4 +19,4 @@
 	<p><input type='Submit' value='View Correct Answer' id='submit_id'></p>
 	{% csrf_token %}
 	</form>
-{% endblock %}	
+{% endblock %}
