Revert "Refactored hardcoded URLs in the views"
This reverts commit 8952751e1ac9697e2f95d10a02aec89137e06b5b.

--- a/qanda/templates/view_answer.html
+++ b/qanda/templates/view_answer.html
@@ -20,7 +20,7 @@
 
 
 {% block form_action %}
-	<form method="GET" action="{%url 'view_question' next_question_id %}">
+	<form method="GET" action="/questions/{{ next_question_id }}/">
 		{% csrf_token %}
 		<input type='Submit' value='Next Question' id='submit_id' autofocus>
 	</form>
