Removed hardcoded first question link from home page view

--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -60,7 +60,7 @@
 								<h2>Welcome to NSQ!</h2>
 								<span class="byline">&hellip; your source for review questions for preperation for the neurosurgery written board examination&hellip;</span>
 							</header>
-							<a href="/questions/1/" class="button alt" id='submit_id'>Get Started</a>
+							<a href="/questions/{{first_question}}/" class="button alt" id='submit_id'>Get Started</a>
 						</section>
 					</div>
 					
