--- a/qanda/templates/base.html
+++ b/qanda/templates/base.html
@@ -39,6 +39,8 @@
 		</div>
 	</div>	
 </div>
+<script src='http://code.jquery.com/jquery.min.js'></script>
+<script src='/static/qanda.js'></script>
 
 </body>
 </html>
