--- a/qanda/templates/base.html
+++ b/qanda/templates/base.html
@@ -40,7 +40,7 @@
 	</div>	
 </div>
 <script src='http://code.jquery.com/jquery.min.js'></script>
-<script src='/static/qanda.js'></script>
+<script src='/static/js/qanda.js'></script>
 
 </body>
 </html>
