--- a/qanda/templates/base.html
+++ b/qanda/templates/base.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>	
 </div>
-<script src='http://code.jquery.com/jquery.min.js'></script>
+<script src='http://code.jquery.com/jquery-1.11.1.min.js'></script>
 <script src='/static/js/qanda.js'></script>
 
 </body>
