--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -48,6 +48,7 @@
 						</li>
 						<li><a href='#'>Preview</a></li>
 						<li><a href="#">Log In</a></li>
+						<li><a href="/register/" id="register_btn">Register</li>
 					</ul>
 				</nav>
 
