--- a/qanda/templates/login.html
+++ b/qanda/templates/login.html
@@ -14,7 +14,7 @@
 	Password: <input type="password" name="password" value="" size="50"/>
 	<br />
 
-	<input type="submit" value="submit" />
+	<input type="submit" value="submit" name="submit" />
 </form>
 
 </body>
