--- a/qanda/templates/home.html
+++ b/qanda/templates/home.html
@@ -8,22 +8,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Neurosurgery Written Board Preperation" />
 		<meta name="keywords" content="Neurosurgery, Board, Question Bank" />
-		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css">	
 		<!-- Custom CSS -->
-		<link rel="stylesheet" type="text/css" href="/static/css/style.css">
-		<!-- Dropotron -->
-		<script src="/static/js/jquery.js"></script>
-		<script src="/static/js/jquery.dropotron.min.js"></script>
-			<script>
-			$(function() {
-				
-				// Note: make sure you call dropotron on the top level <ul>
-				$('#nav > ul').dropotron({ 
-					offsetY: -10 // Nudge up submenus by 10px to account for padding
-				});
-			
-			});
-			</script>
 
 
 
@@ -38,7 +25,9 @@
 
 				<!--Nav Bar-->
 				<nav id='nav'>
+
 					<ul class="menu">
+
 						<li><a href="/">Home</a></li>
 						<li><a href="#">About</a>
 						<ul>
@@ -100,9 +89,10 @@
 						</div>
 							
 					</section>
-
-    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 				</div>
 				<div class="copyright">
 <h3>Design by: O. Arnaout <i class="fa fa-copyright fa-lg"></i> 2014-2015</h3>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
 				</body>
